--- a/templates/welcomepage.html
+++ b/templates/welcomepage.html
@@ -3,9 +3,16 @@
 	<head>
 		<title>MathOfBenzenoids</title>
 		<meta http-equiv="content-type" content="text/html;charset=utf-8" />
+		<link rel="stylesheet" type="text/css" href="../static/css/veryfirststyle.css">
+		 <ul>
+		   <li><a href="default.asp">Home</a></li>
+		   <li><a href="news.asp">News</a></li>
+		   <li><a href="contact.asp">Contact</a></li>
+		   <li><a href="about.asp">About</a></li>
+		 </ul> 
 	</head>
 	<body>
-		<div id="page">
+		<div id="page" style="margin-left:10%;padding:1px 16px;height:1000px;">
 			<h2>Welcome to the MOB</h2>
 			<h3>You can either enter a boundary code here, click on draw to draw your benzenoid of interest or go to the help page to get some more information</h3>
 			<p>
