--- a/templates/mob.html
+++ b/templates/mob.html
@@ -7,6 +7,8 @@
 	<body>
 		
 		<button id="calcbutton">CALCULATE</button>
+		<button id="clearbutton">Clear</button>
+		
 		<textarea id="coordinates"></textarea>
 		
 		<canvas id="canvas" width="500" height="500"></canvas>
@@ -92,9 +94,15 @@
 		 calcbutton.style.top = (height - 50) +"px";
 		 calcbutton.style.zIndex = 10;
 
+		 var clearbutton = document.getElementById('clearbutton');
+		 clearbutton.style.position = "absolute";
+		 clearbutton.style.left = 200+"px";
+		 clearbutton.style.top = (height - 50) +"px";
+		 clearbutton.style.zIndex = 10;
+		 
 		 var posfield = document.getElementById('coordinates');
 		 posfield.style.position = "absolute";
-		 posfield.style.left = 200+"px";
+		 posfield.style.left = 400+"px";
 		 posfield.style.width = 400+"px";
 		 posfield.style.top = (height - 50) +"px";
 		 posfield.style.zIndex = 10;
@@ -260,6 +268,27 @@
 					 }
 			 }, false);
 
+		 clearbutton.addEventListener('click', function(evt)
+			 {
+
+				 var i=0,j=0;
+				 for(i=0; i<boardw; i++)
+					 {
+						 board[i] = [];
+						 for(j=0; j<boardh; j++)
+							 {
+								 board[i][j] = 0;
+							 }
+					 }
+
+				 if (refresher)
+					 {
+						 clearInterval(refresher);
+						 refresher = false;
+					 }
+			 }, false);
+
+		 
 		 var selected = '';
 		 
 		 setInterval(function()
