contact, help, about pages, all linked

--- a/templates/welcomepage.html
+++ b/templates/welcomepage.html
@@ -5,10 +5,10 @@
 		<meta http-equiv="content-type" content="text/html;charset=utf-8" />
 		<link rel="stylesheet" type="text/css" href="../static/css/veryfirststyle.css">
 		 <ul>
-		   <li><a href="default.asp">Home</a></li>
-		   <li><a href="news.asp">News</a></li>
-		   <li><a href="contact.asp">Contact</a></li>
-		   <li><a href="about.asp">About</a></li>
+		   <li><a href="http://127.0.0.1:5000/mob" id="linkout" title="Home">Home</a></li>
+		   <li><a href="http://127.0.0.1:5000/mob/help" id="linkout" title="Help">Help</a></li>
+		   <li><a href="http://127.0.0.1:5000/mob/contact" id="linkout" title="Contact">Contact</a></li>
+		   <li><a href="http://127.0.0.1:5000/mob/about" id="linkout" title="About">About</a></li>
 		 </ul> 
 	</head>
 	<body>
