--- a/templates/contact.html
+++ b/templates/contact.html
@@ -4,25 +4,16 @@
 		<title>MathOfBenzenoids</title>
 		<meta http-equiv="content-type" content="text/html;charset=utf-8" />
 		<link rel="stylesheet" type="text/css" href="../static/css/veryfirststyle.css">
-		<ul>
-		  <li><a href="http://127.0.0.1:5000/mob" id="linkout" title="Home">Home</a></li>
-		  <li><a href="http://127.0.0.1:5000/mob/help" id="linkout" title="Help">Help</a></li>
+		 <ul>
+		   <li><a href="http://127.0.0.1:5000/mob" id="linkout" title="Home">Home</a></li>
+		   <li><a href="http://127.0.0.1:5000/mob/help" id="linkout" title="Help">Help</a></li>
 		   <li><a href="http://127.0.0.1:5000/mob/contact" id="linkout" title="Contact">Contact</a></li>
 		   <li><a href="http://127.0.0.1:5000/mob/about" id="linkout" title="About">About</a></li>
-		</ul>
-		<!-- More jinja style navigation if you are interested ;)
-			 <ul id="navigation">
-			 {% for item in navigation %}
-			 <li><a href="{{ item.href }}">{{ item.caption }}</a></li>
-			 {% endfor %}
-			 </ul>
-		-->
+		 </ul> 
 	</head>
 	<body>
 		<div id="page" style="margin-left:10%;padding:1px 16px;height:1000px;">
-			<p>
-				For your input {{input}} we calculated<br>
-				{{output}}
-			</p>
+			<h2>MOB contact pages</h2>
+			TODO: insert information
 	</body>
 </html>
