--- a/templates/mob.html
+++ b/templates/mob.html
@@ -15,12 +15,9 @@
 		<div id="page" style="margin-left:10%;padding:1px 16px;height:1000px;">
 		<button id="calcbutton">CALCULATE</button>
 		<button id="clearbutton">Clear</button>
-		<button id="anabutton">ANALYSE</button>
-		<button id="clearbutton2">Clear</button>
+		<button id="anabutton">SUBMIT</button>
 		
 		<textarea id="coordinates"></textarea>
-
-		<textarea id="results"></textarea>
 		
 		<canvas id="canvas" width="500" height="500"></canvas>
 
@@ -117,12 +114,6 @@
 		 clearbutton.style.top = (height - 100) +"px";
 		 clearbutton.style.zIndex = 10;
 
-
-	 	 var clearbutton2 = document.getElementById('clearbutton2');
-		 clearbutton2.style.position = "absolute";
-		 clearbutton2.style.left = x+1050+"px";
-		 clearbutton2.style.top = (height - 100) +"px";
-		 clearbutton2.style.zIndex = 10;		 
 		 
 		 var posfield = document.getElementById('coordinates');
 		 posfield.style.position = "absolute";
@@ -131,13 +122,6 @@
 		 posfield.style.top = (height - 100) +"px";
 		 posfield.style.zIndex = 10;
 
-
-		 var posfield2 = document.getElementById('results');
-		 posfield2.style.position = "absolute";
-		 posfield2.style.left = x+1200+"px";
-		 posfield2.style.width = 400+"px";
-		 posfield2.style.top = (height - 100) +"px";
-		 posfield2.style.zIndex = 10;
 		 
 		 var board = [];
 		 
@@ -300,6 +284,17 @@
 					 }
 			 }, false);
 
+     		 anabutton.addEventListener('click', function(evt)
+			 {
+				 update = true;
+				 if (!refresher)
+					 {
+						 refresher = setAnaInterval(function()
+							 {
+							 }, 100);
+					 }
+			 }, false);
+
 		 clearbutton.addEventListener('click', function(evt)
 			 {
 
@@ -318,10 +313,10 @@
 						clearInterval(refresher);
 						refresher = false;
 						   }
-				   document.getElementById("coordinates").value = selected;		    
-			 }, false);
+								    document.getElementById("coordinates").value = selected;
+			    }, false);
+
 								    
-		 
 		 var selected = '';
 								  
 		 setInterval(function()
@@ -372,7 +367,59 @@
 					 }
 				 
 			 }, 16)
-		 
+
+
+    		 setAnaInterval(function()
+								    {
+<!--								   window.location.href = "http://example.com/new_url"; -->
+				 context.fillStyle = "#000";
+				 context.fillRect(0, 0, w, h);
+
+				 if (update)
+					 {
+						 // calculate
+						 for(i=0; i<boardw; i++)
+							 {
+								 for(j=0; j<boardh; j++)
+									 {
+										 var x = i * 16 + (j % 2) * 8;
+										 var y = j * 14;
+										 if (board[i][j])
+											 {
+												 selected += x + ',' + y + ';';
+											 }
+									 }
+							 }
+						update = false;
+						document.getElementById("coordinates").value = selected;
+						<!-- call other html page here that outputs the information given the coordinates-->				    
+						selected = '';
+					 }
+
+				 // render
+				 var i=0,j=0;
+				 for(i=0; i<boardw; i++)
+					 {
+						 for(j=0; j<boardh; j++)
+							 {
+								 var x = i * 16 + (j % 2) * 8;
+								 var y = j * 14;
+								 var hex = emptyHexImage;
+								 if (board[i][j])
+									 {
+										 hex = filledHexImages[ (board[i][j]-1)  % filledHexImages.length];
+									 }
+								 context.drawImage(hex, x, y);
+							 }
+					 }
+				 
+				 if (highlight)
+					 {
+						 context.drawImage(highlightHexImage, highlight.x, highlight.y);
+					 }
+				 
+			 }, 16)
+
 		</script>
 
 		
