--- a/templates/welcomepage.html
+++ b/templates/welcomepage.html
@@ -23,6 +23,13 @@
 				</form>
 			</p>
 			<p>
+			  <h4>Here you can enter a list of hexagon coordinates</h4>
+			  <form method="POST">
+			    <input name="coord">
+			    <input type="submit">
+			  </form>
+			</p>
+			<p>
 				<h4>Here you can draw your own benzenoid</h4>
 				<a href="http://127.0.0.1:5000/mob/draw" id="linkout" title="Here you can draw your own benzenoid" target="_blank"><h3>Draw your own</h3></a>
 			</p>	
