pdflatex and result png

--- a/templates/results.html
+++ b/templates/results.html
@@ -22,7 +22,8 @@
 		<div id="page" style="margin-left:10%;padding:1px 16px;height:1000px;">
 			<p>
 				For your input {{input}} we calculated<br>
-				{{output}}
+				{{output}}<br>
+				<img src={{comment}} alt="Benzenoid">
 			</p>
 	</body>
 </html>
