adaptation of coordinate format

--- a/templates/mob.html
+++ b/templates/mob.html
@@ -373,7 +373,7 @@
 											 var y = j * 14;
 											 if (board[i][j])
 												 {
-													 selected += x + ',' + y + ';';
+													 selected += '(' + x + ',' + y + '),';
 												 }
 										 }
 								 }
