--- a/templates/welcomepage.html
+++ b/templates/welcomepage.html
@@ -4,7 +4,8 @@
 		<title>MathOfBenzenoids</title>
 		<meta http-equiv="content-type" content="text/html;charset=utf-8" />
 		<link rel="stylesheet" type="text/css" href="../static/css/veryfirststyle.css">
-		 <ul>
+		<ul>
+		  <li><img src="static/images/mob_logo.png" alt="logo" style="width:140px;height:70px;"> </li>
 		   <li><a href="http://127.0.0.1:5000/mob" id="linkout" title="Home">Home</a></li>
 		   <li><a href="http://127.0.0.1:5000/mob/help" id="linkout" title="Help">Help</a></li>
 		   <li><a href="http://127.0.0.1:5000/mob/contact" id="linkout" title="Contact">Contact</a></li>
