--- a/static/css/veryfirststyle.css
+++ b/static/css/veryfirststyle.css
@@ -1,11 +1,21 @@
 body {
-    background-color: lightblue;
+    background-color: #333;
     margin: 0;
+    color: white;
 }
 h1 {
     color: white;
     text-align: center;
 }
+
+h3{
+    color: orange;
+}
+
+h4{
+    color: white;
+}
+
 p {
     font-family: verdana;
     font-size: 20px;
@@ -25,8 +35,9 @@ ul {
 li a {
     display: block;
     color: #000;
-    padding: 8px 16px;
+    padding: 6px 20px;
     text-decoration: none;
+    color: white;
 }
 
 li a.active {
@@ -36,5 +47,33 @@ li a.active {
 
 li a:hover:not(.active) {
     background-color: #555;
+    color: white;
+}
+
+/* Add a black background color to the top navigation */
+.topnav {
+    background-color: #333;
+    overflow: hidden;
+}
+
+/* Style the links inside the navigation bar */
+.topnav a {
+    float: right;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+}
+
+/* Change the color of links on hover */
+.topnav a:hover {
+    background-color: #ddd;
+    color: black;
+}
+
+/* Add a color to the active/current link */
+.topnav a.active {
+    background-color: #4CAF50;
     color: white;
 }
