--- a/templates/help.html
+++ b/templates/help.html
@@ -3,13 +3,13 @@
 	<head>
 		<title>MathOfBenzenoids</title>
 		<meta http-equiv="content-type" content="text/html;charset=utf-8" />
-		<link rel="stylesheet" type="text/css" href="../static/css/veryfirststyle.css">
-		 <ul>
-		   <li><a href="http://127.0.0.1:5000/mob" id="linkout" title="Home">Home</a></li>
-		   <li><a href="http://127.0.0.1:5000/mob/help" id="linkout" title="Help">Help</a></li>
-		   <li><a href="http://127.0.0.1:5000/mob/contact" id="linkout" title="Contact">Contact</a></li>
-		   <li><a href="http://127.0.0.1:5000/mob/about" id="linkout" title="About">About</a></li>
-		 </ul> 
+		<link rel="stylesheet" type="text/css" media="screen" href="../static/css/veryfirststyle.css?123456789">
+		<img src="static/images/mob_logo.png" alt="logo" style="width:140px;height:70px;">
+		   <a href="http://127.0.0.1:5000/mob" id="linkout" title="Home">Home</a>
+		   <a href="http://127.0.0.1:5000/mob/help" id="linkout" title="Help">Help</a>
+		   <a href="http://127.0.0.1:5000/mob/contact" id="linkout" title="Contact">Contact</a>
+		   <a href="http://127.0.0.1:5000/mob/about" id="linkout" title="About">About</a>
+		 </div> 
 	</head>
 	<body>
 		<div id="page" style="margin-left:10%;padding:1px 16px;height:1000px;">
