--- a/templates/mob.html
+++ b/templates/mob.html
@@ -3,13 +3,13 @@
 	<head>
 		<title>MathOfBenzenoids</title>
 		<meta http-equiv="content-type" content="text/html;charset=utf-8" />
-		<link rel="stylesheet" type="text/css" href="../static/css/veryfirststyle.css">
-		<ul>
-			<li><a href="http://127.0.0.1:5000/mob" id="linkout" title="Home">Home</a></li>
-			<li><a href="http://127.0.0.1:5000/mob/help" id="linkout" title="Help">Help</a></li>
-			<li><a href="http://127.0.0.1:5000/mob/contact" id="linkout" title="Contact">Contact</a></li>
-			<li><a href="http://127.0.0.1:5000/mob/about" id="linkout" title="About">About</a></li>
-		</ul>
+		<link rel="stylesheet" type="text/css" media="screen" href="../static/css/veryfirststyle.css?123456789">
+		<img src="static/images/mob_logo.png" alt="logo" style="width:140px;height:70px;">
+		   <a href="http://127.0.0.1:5000/mob" id="linkout" title="Home">Home</a>
+		   <a href="http://127.0.0.1:5000/mob/help" id="linkout" title="Help">Help</a>
+		   <a href="http://127.0.0.1:5000/mob/contact" id="linkout" title="Contact">Contact</a>
+		   <a href="http://127.0.0.1:5000/mob/about" id="linkout" title="About">About</a>
+		 </div> 
 		<script
 			src="https://code.jquery.com/jquery-3.3.1.js"
 				 integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
