--- a/templates/contact.html
+++ b/templates/contact.html
@@ -4,7 +4,8 @@
 		<title>MathOfBenzenoids</title>
 		<meta http-equiv="content-type" content="text/html;charset=utf-8" />
 		<link rel="stylesheet" type="text/css" media="screen" href="../static/css/veryfirststyle.css?123456789">	
-		 <img src="static/images/mob_logo.png" alt="logo" style="width:140px;height:70px;">
+		<div class="topnav">
+		 <img src="/static/images/mob_logo.png" alt="logo" style="width:140px;height:70px;">
 		   <a href="http://127.0.0.1:5000/mob" id="linkout" title="Home">Home</a>
 		   <a href="http://127.0.0.1:5000/mob/help" id="linkout" title="Help">Help</a>
 		   <a href="http://127.0.0.1:5000/mob/contact" id="linkout" title="Contact">Contact</a>
