now it looks somewhat nicer

--- a/templates/help.html
+++ b/templates/help.html
@@ -1,20 +1,47 @@
-<!doctype html>
-<html>
-	<head>
-		<title>MathOfBenzenoids</title>
-		<meta http-equiv="content-type" content="text/html;charset=utf-8" />
-		<link rel="stylesheet" type="text/css" media="screen" href="../static/css/veryfirststyle.css?123456789">
-                <div class="topnav">
-		<img src="/static/images/mob_logo.png" alt="logo" style="width:140px;height:70px;">
-		   <a href="http://127.0.0.1:5000/mob" id="linkout" title="Home">Home</a>
-		   <a href="http://127.0.0.1:5000/mob/help" id="linkout" title="Help">Help</a>
-		   <a href="http://127.0.0.1:5000/mob/contact" id="linkout" title="Contact">Contact</a>
-		   <a href="http://127.0.0.1:5000/mob/about" id="linkout" title="About">About</a>
-		 </div> 
-	</head>
-	<body>
-		<div id="page" style="margin-left:10%;padding:1px 16px;height:1000px;">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<title>Math of Benzenoids</title>
+<link rel="stylesheet" type="text/css" media="screen" href="../static/css/veryfirststyle.css?123456789"/>
+</head>
+<body>
+
+<div id="wrapper">
+
+	<div id="header">
+		<div id="logo">
+			
+
+<img src="/static/images/mob_logo.png" alt="logo" style="width:140px;height:70px;float: left;margin-top: 15px">
+<h1 style="float: right;"><a href="#"><p style="color:#db591a">Math of Benzenoids</p></a></h1>
+		</div> 
+		<!-- end #logo -->
+
+		<div id="menu">
+			<ul>
+				<li><a href="http://127.0.0.1:5000/mob" id="linkout" title="Home">Home</a></li>
+			   	<li class="active"><a href="http://127.0.0.1:5000/mob/help" id="linkout" title="Help">Help</a></li>
+			   	<li><a href="http://127.0.0.1:5000/mob/contact" id="linkout" title="Contact">Contact</a></li>
+			   	<li><a href="http://127.0.0.1:5000/mob/about" id="linkout" title="About">About</a></li>
+			</ul>
+		</div>
+		<!-- end #menu -->
+	</div>
+	<!-- end #header -->
+	<div id="page">
+		<div class="post">
 			<h2>MOB help pages</h2>
 			TODO: insert information
-	</body>
+		</div>
+		<!-- end #content -->
+	</div>
+	<!-- end #page -->
+	<div style="clear:both; margin:0;"></div>
+</div> 
+<!-- end wrapper -->
+</body>
 </html>
+
+
+
