--- a/static/css/veryfirststyle.css
+++ b/static/css/veryfirststyle.css
@@ -1,79 +1,165 @@
 body {
-    background-color: #333;
-    margin: 0;
-    color: white;
+	margin: 0px;
+	padding: 0px;
+	background: #242323;
+	text-align: justify;
+	font: 13px Arial, Helvetica, sans-serif;
+	color: #444444;
 }
+
+h1, h2, h3 {
+	margin-top: 0px;
+	font-weight: normal;
+	color: #ff712d;
+}
+
 h1 {
-    color: white;
-    text-align: center;
+	font-size: 2.4em;
 }
 
-h3{
-    color: orange;
+h2 {
+	font-size: 1.8em;
+	background: #444444;
+	padding: 10px 0px 5px 10px;
 }
 
-h4{
-    color: white;
+h3 {
+	font-size: 1.4em;
 }
 
-p {
-    font-family: verdana;
-    font-size: 20px;
+p, ol, ul {
+	margin-bottom: 1.8em;
+	line-height: 160%;
 }
 
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    width: 10%;
-    background-color: #f1f1f1;
-    position: fixed;
-    height: 100%;
-    overflow: auto;
+a {
+	color: #000000;
 }
 
-li a {
-    display: block;
-    color: #000;
-    padding: 6px 20px;
-    text-decoration: none;
-    color: white;
+a:hover {
+	text-decoration: none;
+	color: #FF5400;
 }
 
-li a.active {
-    background-color: #4CAF50;
-    color: white;
+a img {
+	border: none;
 }
 
-li a:hover:not(.active) {
-    background-color: #555;
-    color: white;
+#wrapper {
+	width: 900px;
+	margin: 0 auto;
+	border: 10px solid #FFFFFF;
 }
 
-/* Add a black background color to the top navigation */
-.topnav {
-    background-color: #333;
-    overflow: hidden;
+/* Header */
+
+#header {
+	width: 900px;
+	height: 100px;
+	margin: 0px auto;
 }
 
-/* Style the links inside the navigation bar */
-.topnav a {
-    float: right;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
+#header a {
+	text-decoration: none;
+	color: #FFFFFF;
 }
 
-/* Change the color of links on hover */
-.topnav a:hover {
-    background-color: #ddd;
-    color: black;
+/* Logo */
+
+#logo {
+	float: left;
+	padding-left: 20px;
 }
 
-/* Add a color to the active/current link */
-.topnav a.active {
-    background-color: #4CAF50;
-    color: white;
+#logo h1, #logo p {
+	margin: 0px;
+	line-height: normal;
+	font-weight: normal;
+	color: #FFFFFF;
+}
+
+#logo h1 {
+	padding: 30px 0px 0px 20px;
+}
+
+/* Menu */
+
+#menu {
+	float: right;
+}
+
+#menu ul {
+	margin: 0px;
+	padding: 49px 0px 0px 0px;
+	list-style: none;
+	line-height: normal;
+}
+
+#menu li {
+	float: left;
+	margin: 0px;
+}
+
+#menu a {
+	display: block;
+	width: auto;
+	padding: 6px 20px;
+}
+
+#menu a:hover {
+	text-decoration: underline;
+}
+
+#menu .active {
+	background: #8c490b;
+}
+
+#menu .active a {
+	background: url(images/img02.gif) no-repeat 100% -40px;
+}
+
+/* Page */
+
+#page {
+	width: 900px;
+	margin: 0px auto;
+	padding: 10px 0px 0px 0px;
+	background: #FFFFFF;
+}
+
+
+
+/* Content */
+
+#content {
+	float: right;
+	width: 570px;
+}
+
+.post {
+	margin: 0px 0px 30px 0px;
+}
+
+.post .title {
+	margin: 0px;
+	background: #444444 url(images/img02.jpg) no-repeat left 50%;
+	padding: 7px 25px;
+	font-size: 1.4em;
+}
+
+.post .title h1 {
+}
+
+.post .entry {
+	padding: 0 20px;
+}
+
+.post .meta {
+	font-weight: bold;
+	padding-left: 20px;
+}
+website color 
+.post .byline {
+	margin: 0px;
+	padding-left: 20px;
 }
