--- a/templates/mob.html
+++ b/templates/mob.html
@@ -1,21 +1,32 @@
 <!doctype html>
 <html>
 	<head>
-		<title>MathOfBenzenoids</title>
+		<title>Math of Benzenoids</title>
 		<meta http-equiv="content-type" content="text/html;charset=utf-8" />
 		<link rel="stylesheet" type="text/css" media="screen" href="../static/css/veryfirststyle.css?123456789">
-		<div class="topnav">
-		   <img src="/static/images/mob_logo.png" alt="logo" style="width:140px;height:70px;">
-		   <a href="http://127.0.0.1:5000/mob" id="linkout" title="Home">Home</a>
-		   <a href="http://127.0.0.1:5000/mob/help" id="linkout" title="Help">Help</a>
-		   <a href="http://127.0.0.1:5000/mob/contact" id="linkout" title="Contact">Contact</a>
-		   <a href="http://127.0.0.1:5000/mob/about" id="linkout" title="About">About</a>
-		 </div> 
+	</head>
+	<div id="header">
+		<div id="logo">
+			<h1><a href="#"><p style="color:#db591a">Math of Benzenoids</p></a></h1>
+			<img src="/static/images/mob_logo.png" alt="logo" style="width:140px;height:70px;">
+		</div>
+		<!-- end #logo -->
+		<div id="menu">
+			<ul>
+				<a href="http://127.0.0.1:5000/mob" id="linkout" title="Home">Home</a>
+		   		<a href="http://127.0.0.1:5000/mob/help" id="linkout" title="Help">Help</a>
+		   		<a href="http://127.0.0.1:5000/mob/contact" id="linkout" title="Contact">Contact</a>
+		   		<a href="http://127.0.0.1:5000/mob/about" id="linkout" title="About">About</a>
+			</ul>
+		</div>
+		<!-- end #menu -->
+	</div>
+	<!-- end #head -->
 		<script
 			src="https://code.jquery.com/jquery-3.3.1.js"
 				 integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
 				 crossorigin="anonymous"></script>
-	</head>
+	
 	<body>
 		<div id="page" style="margin-left:10%;padding:1px 16px;height:1000px;">
 			<button id="calcbutton">CALCULATE</button>
