--- a/templates/results.html
+++ b/templates/results.html
@@ -1,30 +1,52 @@
 <!doctype html>
 <html>
-	<head>
-		<title>MathOfBenzenoids</title>
-		<meta http-equiv="content-type" content="text/html;charset=utf-8" />
-		<link rel="stylesheet" type="text/css" media="screen" href="../static/css/veryfirststyle.css?123456789">
-		<div class="topnav">
-		   <img src="/static/images/mob_logo.png" alt="logo" style="width:140px;height:70px;">
-		   <a href="http://127.0.0.1:5000/mob" id="linkout" title="Home">Home</a>
-		   <a href="http://127.0.0.1:5000/mob/help" id="linkout" title="Help">Help</a>
-		   <a href="http://127.0.0.1:5000/mob/contact" id="linkout" title="Contact">Contact</a>
-		   <a href="http://127.0.0.1:5000/mob/about" id="linkout" title="About">About</a>
-		 </div> 
-		<!-- More jinja style navigation if you are interested ;)
-			 <ul id="navigation">
-			 {% for item in navigation %}
-			 <li><a href="{{ item.href }}">{{ item.caption }}</a></li>
-			 {% endfor %}
-			 </ul>
-		-->
-	</head>
-	<body>
-		<div id="page" style="margin-left:10%;padding:1px 16px;height:1000px;">
-			<p>
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<title>Math of Benzenoids</title>
+<link rel="stylesheet" type="text/css" media="screen" href="../static/css/veryfirststyle.css?123456789"/>
+</head>
+<body>
+
+<div id="wrapper">
+
+	<div id="header">
+		<div id="logo">
+			
+
+<img src="/static/images/mob_logo.png" alt="logo" style="width:140px;height:70px;float: left;margin-top: 15px">
+<h1 style="float: right;"><a href="#"><p style="color:#db591a">Math of Benzenoids</p></a></h1>
+		</div> 
+		<!-- end #logo -->
+
+		<div id="menu">
+			<ul>
+				<li><a href="http://127.0.0.1:5000/mob" id="linkout" title="Home">Home</a></li>
+			   	<li><a href="http://127.0.0.1:5000/mob/help" id="linkout" title="Help">Help</a></li>
+			   	<li><a href="http://127.0.0.1:5000/mob/contact" id="linkout" title="Contact">Contact</a></li>
+			   	<li><a href="http://127.0.0.1:5000/mob/about" id="linkout" title="About">About</a></li>
+			</ul>
+		</div>
+		<!-- end #menu -->
+	</div>
+	<!-- end #header -->
+	<div id="page">
+		<div class="post">
+						<p>
 				For your input {{input}} we calculated<br>
 				{{output}}<br>
 				<img src={{comment}} alt="Benzenoid">
 			</p>
-	</body>
+
+		</div>
+		<!-- end #post -->
+	</div>
+	<!-- end #page -->
+	<div style="clear:both; margin:0;"></div>
+</div> 
+<!-- end wrapper -->
+</body>
 </html>
+
+
+
+
