--- a/templates/welcomepage.html
+++ b/templates/welcomepage.html
@@ -1,45 +1,69 @@
-<!doctype html>
-<html>
-	<head>
-		<title>MathOfBenzenoids</title>
-		<meta http-equiv="content-type" content="text/html;charset=utf-8" />
-		<link rel="stylesheet" type="text/css" media="screen, projection" href="../static/css/veryfirststyle.css?123456789">
-		<div class="topnav">
-		   <img src="/static/images/mob_logo.png" alt="logo" style="width:140px;height:70px;">
-		   <a href="http://127.0.0.1:5000/mob" id="linkout" title="Home">Home</a>
-		   <a href="http://127.0.0.1:5000/mob/help" id="linkout" title="Help">Help</a>
-		   <a href="http://127.0.0.1:5000/mob/contact" id="linkout" title="Contact">Contact</a>
-		   <a href="http://127.0.0.1:5000/mob/about" id="linkout" title="About">About</a>
-		 </div> 
-	</head>
-	<body>
-		<div id="page" style="margin-left:10%;padding:1px 16px;height:1000px;">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<title>Math of Benzenoids</title>
+<link rel="stylesheet" type="text/css" media="screen" href="../static/css/veryfirststyle.css?123456789"/>
+</head>
+<body>
+
+<div id="wrapper">
+
+	<div id="header">
+		<div id="logo">
+			
+
+<img src="/static/images/mob_logo.png" alt="logo" style="width:140px;height:70px;float: left;margin-top: 15px">
+<h1 style="float: right;"><a href="#"><p style="color:#db591a">Math of Benzenoids</p></a></h1>
+		</div> 
+		<!-- end #logo -->
+
+		<div id="menu">
+			<ul>
+				<li class="active"><a href="http://127.0.0.1:5000/mob" id="linkout" title="Home">Home</a></li>
+			   	<li><a href="http://127.0.0.1:5000/mob/help" id="linkout" title="Help">Help</a></li>
+			   	<li><a href="http://127.0.0.1:5000/mob/contact" id="linkout" title="Contact">Contact</a></li>
+			   	<li><a href="http://127.0.0.1:5000/mob/about" id="linkout" title="About">About</a></li>
+			</ul>
+		</div>
+		<!-- end #menu -->
+	</div>
+	<!-- end #header -->
+	<div id="page">
+		<div class="post">
 			<h2>Welcome to the MOB</h2>
-			<h3>You can either enter a boundary code here, click on draw to draw your benzenoid of interest or go to the help page to get some more information</h3>
-			<p>
-				<h4>Here you can enter a boundary code</h4>
-				<form method="POST">
-					<input name="text">
-					<input type="submit">
-				</form>
-			</p>
-			<p>
-			        <h4>Here you can enter a list of hexagon coordinates</h4>
-				<form method="POST">
-			                <input name="coord">
+				<h3>You can either enter a boundary code here, click on draw to draw your benzenoid of interest or go to the help page to get some more information</h3>
+				<p>
+					<h4>Here you can enter a boundary code</h4>
+					<form method="POST">
+						<input name="text">
+						<input type="submit">
+					</form>
+				</p>
+				<p>
+				        <h4>Here you can enter a list of hexagon coordinates</h4>
+					<form method="POST">
+				                <input name="coord">
 			                <input type="submit">
-			        </form>
-			</p>
-			<p>
-				<h4>Here you can draw your own benzenoid</h4>
-				<a href="http://127.0.0.1:5000/mob/draw" id="linkout" title="Here you can draw your own benzenoid" target="_blank"><h3>Draw your own</h3></a>
-			</p>	
-			<p>
-				<h4>Here you can upload a file</h4>
-				<form method=post enctype=multipart/form-data>
-					<input type=file name=file>					
-					<input type=submit value=Upload>
-				</form>
-			</p>	
-	</body>
+				        </form>
+				</p>
+				<p>
+					<h4>Here you can draw your own benzenoid</h4>
+					<a href="http://127.0.0.1:5000/mob/draw" id="linkout" title="Here you can draw your own benzenoid" target="_blank"><h3>Draw your own</h3></a>
+				</p>	
+				<p>
+					<h4>Here you can upload a file</h4>
+					<form method=post enctype=multipart/form-data>
+						<input type=file name=file>					
+						<input type=submit value=Upload>
+					</form>
+				</p>
+		</div>
+		<!-- end #content -->
+	</div>
+	<!-- end #page -->
+</div> 
+<!-- end wrapper -->
+</body>
 </html>
+
