--- a/templates/help.html
+++ b/templates/help.html
@@ -13,7 +13,7 @@
 		<div id="logo">
 			
 
-<img src="/static/images/mob_logo.png" alt="logo" style="width:140px;height:70px;float: left;margin-top: 15px">
+<img src="/static/images/logo.png" alt="logo" style="width:140px;float: left;margin-top: 22px">
 <h1 style="float: right;"><a href="#"><p style="color:#db591a">Math of Benzenoids</p></a></h1>
 		</div> 
 		<!-- end #logo -->
