--- a/templates/mob.html
+++ b/templates/mob.html
@@ -14,7 +14,7 @@
 	<body>
 		<div id="sidebar">
 			
-			<img src="/static/images/mob_logo.png" alt="logo" style="width:140px;height:70px;float: left; margin-top: 15px; margin-left:15px">
+			<img src="/static/images/logo.png" alt="logo" style="width:150px;float: left; margin-top: 20px; margin-left:15px">
 			<br><br><br>
 			<ul>
 				<a href="http://127.0.0.1:5000/mob" id="linkout" title="Home">Home</a>
