favicon see tab pic :D

--- a/templates/about.html
+++ b/templates/about.html
@@ -4,6 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>Math of Benzenoids</title>
 <link rel="stylesheet" type="text/css" media="screen" href="../static/css/veryfirststyle.css?123456789"/>
+<link rel="shortcut icon" type="image/x-icon" href="/static/images/4536snake_logo.ico">
 </head>
 <body>
 
