--- a/templates/mob.html
+++ b/templates/mob.html
@@ -4,6 +4,7 @@
 		<title>Math of Benzenoids</title>
 		<meta http-equiv="content-type" content="text/html;charset=utf-8" />
 		<link rel="stylesheet" type="text/css" media="screen" href="../static/css/veryfirststyle.css?123456789">
+		<link rel="shortcut icon" type="image/x-icon" href="/static/images/4536snake_logo.ico">
 	</head>
 	<!-- end #head -->
 		<script
