--- a/templates/help.html
+++ b/templates/help.html
@@ -33,7 +33,11 @@
 	<div id="page">
 		<div class="post">
 			<h2>MOB help pages</h2>
-			TODO: insert information
+			TODO: insert information, TODO: 
+
+			<br><p>
+			<img src="/static/images/bec.png" style="width:350px" class="center">
+			</p>
 		</div>
 		<!-- end #content -->
 	</div>
