--- a/templates/results.html
+++ b/templates/results.html
@@ -14,8 +14,8 @@
 		<div id="logo">
 			
 
-<img src="/static/images/logo.png" alt="logo" style="width:140px;float: left;margin-top: 22px">
-<h1 style="float: right;"><a href="#"><p style="color:#db591a">Math of Benzenoids</p></a></h1>
+<a href="http://127.0.0.1:5000/mob" id="linkout" title="Home"><img src="/static/images/logo.png" alt="logo" style="width:140px;float: left;margin-top: 22px"></a>
+<h1 style="float: right;"><a href="http://127.0.0.1:5000/mob"><p style="color:#db591a">Math of Benzenoids</p></a></h1>
 		</div> 
 		<!-- end #logo -->
 
