--- a/templates/welcomepage.html
+++ b/templates/welcomepage.html
@@ -50,7 +50,7 @@
 				</p>
 				<p>
 					<h4>Here you can draw your own benzenoid</h4>
-					<a href="http://127.0.0.1:5000/mob/draw" id="linkout" title="Here you can draw your own benzenoid" target="_blank"><h3>Draw your own</h3></a>
+					<a href="http://127.0.0.1:5000/mob/draw" id="linkout" title="Here you can draw your own benzenoid"><h3>Draw your own</h3></a>
 				</p>	
 				<p>
 					<h4>Here you can upload a file</h4>
